--- a/app/public/bin/css/print.sass
+++ b/app/public/bin/css/print.sass
@@ -1,6 +1,5 @@
 article
   margin: 0
-  padding: 70px
   display: inline-block
   width: 210mm
   height: 297mm
@@ -13,4 +12,4 @@ article
 
 @font-face
   font-family: Lato
-  src: url('../arts/lato.ttf')
+  src: url('../../arts/lato.ttf')
